--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2613,6 +2613,22 @@ input, select, textarea {
 				width: 100%;
 			}
 
+/* Iframe */
+
+.iframe-container{
+	position: relative;
+	width: 100%;
+	padding-bottom: 56.25%; 
+	height: 0;
+  }
+  .iframe-container iframe{
+	position: absolute;
+	top:0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  }
+
 /* List */
 
 	ol {
